# obsidian-cortex

./: Cargo.toml  README.md  obsidian-cortex.yml
docs/: obsidian-cli-analysis.md
docs/design/: 2026-03-16-obsidian-cortex.md  2026-03-18-cycle-detection.md  2026-03-18-daemon-auto-apply.md  2026-03-18-lint-false-positives.md  2026-03-18-phase2-llm-features.md  2026-03-18-schema-alignment.md  2026-03-18-wikilink-severity.md  2026-03-19-tokio-daemon-scheduling.md
src/: autotag.rs  cli.rs  config.rs  daemon.rs  duplicates.rs  fabric.rs  frontmatter.rs  intel.rs  lib.rs  linking.rs  links.rs  logging.rs  main.rs  migrate.rs  naming.rs  quality.rs  report.rs  scope.rs  state.rs  tags.rs  testutil.rs  vault.rs
system/ai-output/: daily-2026-03-19.md
