[package]
name = "obsidian-cortex"
version = "0.2.5"
edition = "2024"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]
build = "build.rs"
description = "Vault governance and intelligence companion for Obsidian"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"
croner = "3.0.1"
dirs = "6.0"
eyre = "0.6"
fs2 = "0.4"
glob = "0.3"
notify = "7"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shellexpand = "3.1"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ureq = { version = "3.2.0", features = ["json"] }
walkdir = "2.5"
which = "8.0.2"

[build-dependencies]

[dev-dependencies]
tempfile = "3.27.0"
# For build.rs if needed
